test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_22.k
schema Data:
    [str]: int
    
data_list = Data.err_instances()
